cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(example C CXX ASM)
pico_sdk_init()
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DPICO_USE_MALLOC_MUTEX=1")
add_executable(pico-ring main.c)
pico_enable_stdio_uart(pico-ring 1)
pico_enable_stdio_usb(pico-ring 1)
target_link_libraries(pico-ring PRIVATE pico_stdlib hardware_gpio hardware_spi hardware_dma)
pico_add_extra_outputs(pico-ring)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
